feat: add typescript multi-service template
